styles/Home.module.css
.container {
  min-height: 100vh;
  min-width: 100vw;
}

.main {
  display: flex;
  justify-content: center;
}

.mainImage {
  margin-left: auto;
  margin-right: auto;
  max-height: 420px;
  justify-content: center;
  border: 2px solid #D3D6DA;
}

.game {
  margin-top: 40px;
  display: flex;
  flex-direction: column;
}

.inputSection {
  margin-top: 30px;
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
}

.enterButton {
  background-color: #D3D6DA;
  border-radius: 4px;
  font-weight: 600;
  font-size: 24px;
  padding: .5rem 1rem;
  cursor: pointer;
  margin-left: 10px;
}

.enterButton::selection, .header::selection, .display::selection {
  background-color: rgba(0,0,0,0);
}

.inputBox {
  border: 2px solid #D3D6DA;
  font-size: 24px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 8px;
  padding-bottom: 8px;
  flex-grow: 1;
}

.display, .displaySolved {
  padding-left: 20px;
  padding-right: 20px;
  /* letter-spacing: 8px; */
  letter-spacing: normal;
  word-spacing: 5px;
  font-size: 32px;
  cursor: default;
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
  max-width: 420px;
  font-weight: 900;
  text-align: center;
}

.displaySolved {
  letter-spacing: normal;
  animation: flip 0.8s ease forwards;
  font-weight: 400;
  font-size: 24px;
}

.tableSemanticSimilarity {
  width: 60px;
}

.table {
  display: table;
  max-width: 100%;
  max-width: 420px;
  margin-top: 20px;
}

.tableGuessNum {
  width: 40px;
}

.tableText {
  max-width: 320px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.wordCorrect {
  color: orange;
}

@media (max-width: 420px) {
  .game {
    margin-top: 10px;
  }

  .main {
    max-width: calc(100vw);
  }

  .mainImage {
    width: 90vw;
    margin-left: auto;
    margin-right: auto;
  }

  .inputSection {
    flex-direction: column;
  }

  .inputBox {
    width: calc(100vw - 20px);
  }

  .enterButton {
    margin-top: 10px;
  }

  .tableText {
    max-width: calc(100vw - 100px);
    word-wrap: break-word;
    white-space: normal!important;
  }

  .display {
    max-width: 100vw;
  }
}

@keyframes flip {
  0% {
    transform: rotateX(0deg);
  }
  35% {
    transform: rotateX(60deg);
  }
  50% {
    transform: rotateX(0deg);
  }
  65% {
    transform: rotateX(60deg);
  }
  100% {
    transform: rotateX(0deg);
  }
}

